--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Finexo </title>
+  <title> Test Project </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Finexo
+              TEST
             </span>
           </a>
 
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/bitcoin.png" alt="">
                   </div>
                 </div>
               </div>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/bitcoin.png" alt="">
                   </div>
                 </div>
               </div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/bitcoin.png" alt="">
                   </div>
                 </div>
               </div>
@@ -295,7 +295,7 @@
         <div class="col-md-6">
           <div class="detail-box">
             <h3>
-              We Are Finexo
+              We Are TEST
             </h3>
             <p>
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
