developer to devops role update

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
               <a class="" href="about.html">
                 About
               </a>
-              <a class="" href="service.html">
+              <a class="" href="#">
                 Services
               </a>
               <a class="" href="why.html">
